main/default/objects/Compass_Setting__c/Compass_Setting__c.object-meta.xml
<CustomObject>
    <label>Compass Setting</label>
    <nameField>
        <label>Compass Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compass Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>