main/default/objects/Compass_Setting__c/fields/Active_Outreach_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Active_Outreach_Notifications__c</fullName>
    <description>Stores Object API name where Outreach Notifications will be enabled.</description>
    <inlineHelpText>Enter object&apos;s API Name separated by comma.
(e.g Session__c,Journey__c)</inlineHelpText>
    <label>Active Outreach Notifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>