main/default/objects/Compass_Setting__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default Settings</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>