main/default/objects/Compass_Setting__c/fields/Domain_Name_Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name_Event_Registration__c</fullName>
    <label>Domain Name (Event Registration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>