main/default/objects/Compass_Setting__c/fields/Email_Template_First_Modified_Parking__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_First_Modified_Parking__c</fullName>
    <description>It contains ID of the Template for First Modified Parking Lot</description>
    <label>Email Template First Modified Parking</label>
    <length>18</length>
    <type>Text</type>
</CustomField>