main/default/objects/Compass_Setting__c/fields/Email_Template_Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Issue_Id__c</fullName>
    <label>Email Template - Issue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>