main/default/objects/Compass_Setting__c/fields/Email_Template_Parking_Lot_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Parking_Lot_Assigned__c</fullName>
    <label>Email Template - Parking Lot Assigned</label>
    <length>18</length>
    <type>Text</type>
</CustomField>