main/default/objects/Compass_Setting__c/fields/Notify_Emails__c.field-meta.xml
<CustomField>
    <fullName>Notify_Emails__c</fullName>
    <label>Notify Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>