main/default/objects/Compass_Setting__c/fields/Notify_User__c.field-meta.xml
<CustomField>
    <fullName>Notify_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compass_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>